@@ -1,5 +1,11 @@
 2007-12-30  Olav Vitters  <olav@bkor.dhs.org>
 
+	* schedule/libschedule.py: Change the schedule format to be a bit more
+	'free'. Further, add version information to the file.
+	* schedule/2.22.schedule: Update schedule per code changes.
+
+2007-12-30  Olav Vitters  <olav@bkor.dhs.org>
+
 	* schedule/2.22.schedule:
 	* schedule/automail.py:
 	* schedule/2.22.wiki:
